fixtures/cs-cmp-01/good/token-equals-null.ts
import crypto from "crypto";

export function isMissing(token: string | null) {
	return token == null;
}

void crypto;
